# organon-rust

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md
crates/x86_64/: Cargo.toml
crates/x86_64/src/: lib.rs  modes.rs  registers.rs
crates/x86_64/src/architectures/: mod.rs
crates/x86_64/src/architectures/ia32/: mod.rs
crates/x86_64/src/architectures/ia32/modes/: mod.rs  protected.rs  real_address.rs  system_management.rs
crates/x86_64/src/architectures/ia32/ressources/: address_space.rs  mod.rs
crates/x86_64/src/architectures/intel64/: mod.rs
crates/x86_64/src/architectures/intel64/modes/: ia32e_64bit.rs  ia32e_compatibility.rs  mod.rs
learnrust/no_std/rustos/: Cargo.toml
learnrust/no_std/rustos/.cargo/: config.toml
learnrust/no_std/rustos/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
learnrust/no_std/rustos/src/allocator/: linked_list.rs
learnrust/no_std/rustos/src/task/: keyboard.rs  simple_executor.rs
learnrust/no_std/rustos/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
learnrust/std/derive_builder/: Cargo.toml
learnrust/std/derive_builder/src/: lib.rs  quote_fields.rs  quote_methods.rs
learnrust/std/derive_debug/: Cargo.toml
learnrust/std/derive_debug/src/: lib.rs  quote_chained_calls.rs
learnrust/std/derive_debug/tests/: progress.rs
learnrust/std/flatten_iterator/: Cargo.toml
learnrust/std/kilo/: Cargo.toml
learnrust/std/kilo/src/: editor.rs  lib.rs  screen.rs
learnrust/std/minigrep/: Cargo.toml
learnrust/std/organon/: Cargo.toml
learnrust/std/organon/src/: lib.rs
learnrust/std/organon/src/traits/: collection.rs  data.rs  data_manager.rs  id.rs  item.rs  item_manager.rs  mod.rs  selection.rs  size.rs
learnrust/std/organon/src/traits/collection/: collection.rs  mod.rs  (+2 more)
learnrust/std/synex/: Cargo.toml
learnrust/std/synex/src/: derive_input.rs  field.rs  fields.rs  fields_named.rs  generic_argument.rs  generic_param.rs  generics.rs  lib.rs  path.rs  testsuite.rs  type_path.rs
learnrust/std/synex/src/derive_input/: extract.rs  extract_iter.rs  extract_mut.rs  extract_nth.rs  extract_where.rs  field_by_name.rs  field_ident.rs  mod.rs  nth_field_ident.rs  push_value.rs  testsuite.rs
learnrust/std/synex/src/punctuated/: extract.rs  extract_nth.rs  extract_where.rs  mod.rs
learnrust/std/synex/testsuite/: Cargo.toml
learnrust/std/synex/testsuite/src/: lib.rs
learnrust/std/synex/testsuite/tests/: struct_multiple_fields.rs  struct_single_field.rs  unit_struct.rs
learnrust/std/task/: Cargo.toml
learnrust/std/task/src/: change_entry.rs  entry.rs  errors.rs  lib.rs  log_entry.rs  main.rs  parse.rs  task.rs
learnrust/std/task/src/enums/: mask.rs  mod.rs  priority.rs  recur.rs  status.rs
learnrust/std/task/src/task/: mod.rs  tests.rs
learnrust/std/task/tests/: parse_data_files.rs
learnrust/std/tw/: Cargo.toml
learnrust/std/tw/src/: lib.rs  main.rs
learnrust/std/tw/src/cli2/: mod.rs
learnrust/std/tw/src/context/: configuration_defaults.rs  initialize.rs  mod.rs  verbose.rs
learnrust/std/tw/src/errors/: mod.rs
learnrust/std/tw/src/file/: mod.rs
learnrust/std/tw/src/libshared/: mod.rs
learnrust/std/tw/src/path/: mod.rs
learnrust/std/webserver/: Cargo.toml
learnrust/std/webserver/src/: main.rs
(+117 files in other folders)
