[workspace]
members = [
    "learnrust/std/derive_builder",
    "learnrust/std/flatten_iterator",
    "learnrust/std/impl_extract_for_syn",
    "learnrust/std/kilo",
    "learnrust/std/minigrep",
    "learnrust/std/organon",
    "learnrust/std/sandbox",
    "learnrust/std/webserver",
]
exclude = ["learnrust/no_std/rustos"]

[workspace.dependencies]
color-eyre = "0.6.2"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"
thiserror = "1.0.37"
trybuild = "1.0.71"
