[package]
name = "rustos"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
conquer-once = { version = "0.2.1", default-features = false }
crossbeam-queue = { version = "0.2.3", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.4", default-features = false, features = [
    "alloc",
] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.9.4"
uart_16550 = "0.2.0"
volatile = "0.2.7"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
