[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { workspace = true, features = ["diff"] }

[dependencies]
# Procedural macros
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# Extractors
impl_extract_for_syn = { path = "../impl_extract_for_syn" }
